5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1716_2497.log
== TEST (2019-05-07 23:20:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:25:30) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:26:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:26:29) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:27:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0/100
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:28:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + saldo

print(round(t, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:29:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (qi >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(t, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:29:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(t, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:30:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:31:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:32:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:35:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rendi = juros/100
# Atualizacao de saldo
while (saldo >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:35:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0
rendi = juros/100
# Atualizacao de saldo
while (juros >1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qi = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:14:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and tempo < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:15:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and tempo < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and tempo < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
756.99
787.27
818.76
851.51
885.57
920.99
957.83
996.15
1035.99
1077.43
1120.53
1165.35
1211.96
1260.44
1310.86
1363.3
1417.83
1474.54
1533.52
1594.86
1658.66
1725.0
1794.0
1865.76
1940.39
2018.01
2098.73
2182.68
2269.99
2360.79
2455.22
2553.43
2655.56
2761.79
2872.26
2987.15
3106.63
3230.9
3360.14
3494.54
3634.32
3779.7
3930.88
4088.12
4251.64
4421.71
4598.58
4782.52
4973.82
5172.78
5379.69
5594.87
5818.67
6051.42
6293.47
6545.21
6807.02
7079.3
7362.47
7656.97
7963.25
8281.78
8613.05
8957.57
9315.88
9688.51
10076.05
10479.09
10898.26
11334.19
11787.56
12259.06
12749.42
13259.4
13789.77
14341.36
14915.02
15511.62
16132.08
16777.37
17448.46
18146.4
18872.26
19627.15
20412.23
21228.72
22077.87
22960.99
23879.42
24834.6
25827.99
26861.11
27935.55
29052.97
30215.09
31423.69
32680.64
33987.87
35347.38
36761.28
38231.73
39761.0
41351.44
43005.49
44725.71
46514.74
48375.33
50310.35
52322.76
54415.67
56592.3
58855.99
61210.23
63658.64
66204.98
68853.18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:16:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > 1 and tempo < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:18:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo > 1):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:22:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (saldo > 1):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
3589.56
3733.14
3882.47
4037.77
4199.28
4367.25
4541.94
4723.62
4912.56
5109.06
5313.43
5525.96
5747.0
5976.88
6215.96
6464.59
6723.18
6992.11
7271.79
7562.66
7865.17
8179.77
8506.97
8847.24
9201.13
9569.18
9951.95
10350.02
10764.03
11194.59
11642.37
12108.06
12592.39
13096.08
13619.93
14164.72
14731.31
15320.56
15933.39
16570.72
17233.55
17922.89
18639.81
19385.4
20160.82
20967.25
21805.94
22678.18
23585.31
24528.72
25509.87
26530.26
27591.47
28695.13
29842.94
31036.65
32278.12
33569.24
34912.01
36308.49
37760.83
39271.27
40842.12
42475.8
44174.83
45941.83
47779.5
49690.68
51678.31
53745.44
55895.26
58131.07
60456.31
62874.56
65389.55
68005.13
70725.33
73554.35
76496.52
79556.38
82738.64
86048.18
89490.11
93069.71
96792.5
100664.2
104690.77
108878.4
113233.54
117762.88
122473.39
127372.33
132467.22
137765.91
143276.55
149007.61
154967.91
161166.63
167613.3
174317.83
181290.54
188542.16
196083.85
203927.2
212084.29
220567.66
229390.37
238565.99
248108.62
258032.97
268354.29
279088.46
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:37:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (temp > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (temp > t):
NameError: name 'temp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:39:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (temp > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (temp > t):
NameError: name 'temp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:40:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
3589.56
3733.14
3882.47
4037.77
4199.28
4367.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:40:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- EXECUTION TIME:
0.196411
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
3589.56
3733.14
3882.47
4037.77
4199.28
4367.25
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
2575.25
2678.26
2785.39
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
6633.38
6898.72
7174.66
7461.65
7760.12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:40:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
3589.56
3733.14
3882.47
4037.77
4199.28
4367.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:49:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
3589.56
3733.14
3882.47
4037.77
4199.28
4367.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:49:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi * tempo      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
17257.5
86287.5
431437.5
2157187.5
10785937.5
53929687.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:50:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:50:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (t < tempo):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1
	print(round(saldo, 2)) # Exibicao de resultados
-- EXECUTION TIME:
0.12405
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
